# vipper

./: README.md  pyproject.toml  solver.py
geometry/: hull.py
physics/: appendages.py  boat.py  context.py
vipper/geometry/: boat.py  hull.py
vipper/physics/: boat.py  hull.py
