[tool.poetry]
name = "vipper"
version = "0.1.0"
description = "A python sailboat Velocity Prediction Programm (VPP)"
authors = ["chaumage <chaumatg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
target-version = "py38"
indent-width = 4
